# bitfinity-evm-sdk

./: .dockerignore  .gitignore  AUDIT_IGNORE  Cargo.toml  Dockerfile  Dockerfile_evm_block_extractor  README.md  canister_ids.json  dfx.json  docker-compose.yml  justfile
just/: build.just  (+1 more)
src/did/: Cargo.toml  README.md  build.rs
src/did/benches/: serialization.rs
src/did/src/: alloy_primitives.rs  alloy_primitives_07.rs  alloy_primitives_08.rs  block.rs  build.rs  bytes.rs  certified.rs  codec.rs  constant.rs  error.rs  evm_reset_state.rs  evm_state.rs  fees.rs  gas.rs  hash.rs  http.rs  ic.rs  init.rs  integer.rs  keccak.rs  lib.rs  logs.rs  macros.rs  mint_order_exemption.rs  notify.rs  permission.rs  registration_info.rs  revert_blocks.rs  send_raw_transaction.rs  sign_strategy.rs  state.rs  test_utils.rs  transaction.rs  unconfirmed_blocks.rs  unsafe_blocks.rs  upgrade_info.rs  utils.rs
src/did/src/rpc/: accessor.rs  error.rs  id.rs  mod.rs  params.rs  request.rs  response.rs  version.rs
src/did/src/send_raw_transaction/: signature.rs  tx_kind.rs
src/did/tests/: block_it.rs  block_it.rs_  transaction_it.rs  transaction_it.rs_DISABLED  transactions_it.rs
src/encode-macros/: Cargo.toml
src/encode-macros/src/: derive_fixed_storable.rs  lib.rs
src/encode-macros/tests/: derive_fixed.rs
src/eth-signer/: Cargo.toml  README.md
src/eth-signer/scripts/: build_test_canister.sh  dfx_test_ic_signing.sh
src/eth-signer/src/: ic_sign.rs  lib.rs  sign_strategy.rs  transaction.rs  utils.rs
src/eth-signer/src/wallet/: mod.rs  private_key.rs
src/eth-signer/test_canister/: Cargo.toml  README.md
src/eth-signer/test_canister/scripts/: build.sh
src/eth-signer/test_canister/src/: canister.rs  main.rs
src/eth-signer/tests/pocket_ic_tests/: ic_sign_test_canister.rs  mod.rs  wasm_utils.rs
src/eth-signer/tests/test_canister/: Cargo.toml
src/ethereum-json-rpc-client/: Cargo.toml
src/ethereum-json-rpc-client/src/: canister_client.rs  error.rs  http.rs  http_outcall.rs  lib.rs  methods.rs  outcall.rs  request.rs  reqwest.rs  state_machine_tests_client.rs
src/ethereum-json-rpc-client/tests/: integration_tests.rs
src/ethereum-json-rpc-client/tests/reqwest/: mod.rs  rpc_client.rs
src/evm-block-extractor/: Cargo.toml  Dockerfile  GCP_SA.json  README.md
src/evm-block-extractor/scripts/: entrypoint.sh
src/evm-block-extractor/src/: block_extractor.rs  blocks_reader.rs  blocks_writer.rs  bq.rs  config.rs  constants.rs  lib.rs  main.rs  rpc.rs  rpc_client.rs  server.rs
src/evm-block-extractor/src/database/: big_query_db_client.rs  in_memory_db_client.rs  mod.rs  postgres_db_client.rs
src/evm-block-extractor/src/storage_clients/: gcp_big_query.rs  gcp_bq.rs  hashmap.rs  hashmap_client.rs  mod.rs  postgres_client.rs
src/evm-block-extractor/src/task/: block_extractor.rs  mod.rs
src/evm-block-extractor/tests/: big_query_client_it.rs  block_extractor_it.rs  evm_block_extractor_it.rs  evm_block_extractor_it.rs_DISABLED  postgres_client_it.rs
src/evm-block-extractor/tests/client/: mod.rs
src/evm-block-extractor/tests/tests/: block_extractor_it.rs  database_client_it.rs  mod.rs  server_it.rs
src/evm-block-extractor/tests_disabled/: big_query_client_it.rs  block_extractor_it.rs
src/evm-block-extractor/tests_disabled/client/: mod.rs
src/evm-log-extractor/: Cargo.toml  Dockerfile  README.md
src/evm-log-extractor/src/: config.rs  lib.rs  main.rs
src/evm-log-extractor/src/job/: logs.rs
src/evm-log-extractor/tests/: evm_log_extractor_it.rs
src/evmc-client/: Cargo.toml  README.md
src/evmc-client/src/: agent.rs  client.rs  error.rs  ic_client.rs  lib.rs
src/iceth-client/: Cargo.toml
src/iceth-client/scripts/: dfx_deploy.sh
src/iceth-client/src/: lib.rs
src/iceth-client/test-canister/: Cargo.toml
src/iceth-client/test-canister/src/: lib.rs  main.rs
src/icrc-client/: Cargo.toml
src/icrc-client/src/: client.rs  error.rs  lib.rs
src/minter-api/: Cargo.toml
src/minter-api/src/: error.rs  id256.rs  init.rs  lib.rs  order.rs  reason.rs
src/minter-client/: Cargo.toml
src/minter-client/scripts/: build_test_canister.sh  download_iceth.sh
src/minter-client/src/: lib.rs
src/minter-client/test-canister/src/: lib.rs
src/minter-did/: Cargo.toml
src/minter-did/src/: erc721_mint_order.rs  error.rs  id256.rs  init.rs  lib.rs  order.rs  reason.rs  runes.rs
src/oracle_canister/: Cargo.toml  README.md  article.md
src/oracle_canister/src/: canister.rs  error.rs  lib.rs  main.rs  state.rs  timer.rs
src/oracle_canister/src/state/: config.rs  http.rs  pair_price.rs
src/oracle_canister/src/timer/: http_outcall.rs
src/register-evm-agent/: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json
src/register-evm-agent-core/: Cargo.toml
src/register-evm-agent-core/src/: error.rs  lib.rs  reservation.rs
src/register-evm-agent/register_evm_agent/src/: constant.rs
src/register-evm-agent/scripts/: register_minter_test.sh
src/register-evm-agent/simple_canister/: Cargo.toml
src/register-evm-agent/src/: cli.rs  constant.rs  error.rs  lib.rs  main.rs  reservation.rs  transaction.rs
src/register-evm-agent/src/register_evm_agent/: Cargo.toml  README.md
src/register-evm-agent/src/simple_canister/: Cargo.toml  README.md
src/register_agent/: Cargo.toml  README.md
src/register_agent/src/: agent.rs  cli.rs  constant.rs  error.rs  main.rs  registration.rs
src/register_evm_agent/: Cargo.toml  README.md
src/register_evm_agent/src/: agent.rs  cli.rs  constant.rs  error.rs  registration.rs
src/register_evm_agent/src/agent/: generic_identity.rs
src/rpc-client/: Cargo.toml
src/rpc-client/src/: lib.rs  methods.rs  request.rs
src/rpc-client/tests/: integration_tests.rs
src/signature/: Cargo.toml
src/signature-verification-canister-client/: Cargo.toml  README.md
src/signature-verification-canister-client/src/: client.rs  lib.rs
src/signature/src/: main.rs
src/simple_canister/: Cargo.toml  README.md  evmc.did
src/simple_canister/examples/: signature.rs
src/simple_canister/src/: canister.rs  error.rs  lib.rs  state.rs
(+1068 files in other folders)
