[workspace]
members = [
    "src/did",
    "src/eth-signer",
    "src/eth-signer/test_canister",
    "src/evm-block-extractor",
    "src/evm-canister-client",
    "src/minter-client",
    "src/minter-did",
    "src/register-evm-agent",
    "src/ethereum-json-rpc-client",
    "src/signature-verification-canister-client",
]
resolver = "2"

[workspace.package]
authors = ["Bitfinity Network"]
categories = ["cryptography::cryptocurrencies"]
description = "EVM canister SDK"
edition = "2021"
homepage = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
include = ["src/**/*", "LICENSE", "README.md"]
license = "MIT"
name = "bitfinity-evm-sdk"
repository = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
version = "0.8.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.3"
candid = "0.9"
clap = { version = "4", features = ["derive"] }
derive_more = "0.99"
env_logger = { version = "0.10.0", default-features = false }
ethereum-types = "0.14"
ethers-core = "2.0"
hash-db = "0.16"
hex = "0.4"
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.11.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.11.x" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.11.x" }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", tag = "v0.11.x" }
ic-storage = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-storage", tag = "v0.11.x" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.11.x" }
itertools = "0.11"
jsonrpc-core = "18.0"
log = "0.4"
num = "0.4"
once_cell = "1.16"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.11", default-features = false }
rlp = "0.5"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.24", features = ["macros", "rt"] }
zip = "0.6"
murmur3 = "0.5"
alloy-primitives = { version = "0.4", default-features = false }

[profile.dev]
debug = false
