[workspace]
members = [
    "src/icrc-client",
    "src/did",
    "src/eth-signer",
    "src/eth-signer/tests/test_canister",
    "src/ethereum-json-rpc-client",
    "src/evm-block-extractor",
    "src/evm-canister-client",
    "src/evm-log-extractor",
    "src/minter-client",
    "src/minter-did",
    "src/register-evm-agent",
    "src/signature-verification-canister-client",
]
resolver = "2"

[workspace.package]
authors = ["Bitfinity Network"]
categories = ["cryptography::cryptocurrencies"]
description = "EVM canister SDK"
edition = "2021"
homepage = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
include = ["src/**/*", "LICENSE", "README.md"]
license = "MIT"
repository = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
version = "0.27.0"

[workspace.dependencies]
alloy-primitives = { version = "0.7", default-feures = false }
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.3"
candid = "0.10"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false }
derive_more = "0.99"
env_logger = { version = "0.11.0", default-features = false }
ethereum-types = "0.14"
ethers-core = "2.0"
futures = { version = "0.3", default-features = false }
hex = "0.4"
# Newer version 0.13.3 breakes backward compatibility. Add this temporary fix until pocket-ic or ic-cdk crates are fixed.
ic-cdk = "=0.13.2"
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.17.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.17.x" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.17.x" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.17.x" }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", tag = "v0.17.x" }
itertools = "0.13"
jsonrpc-core = "18.0"
jsonrpsee = { version = "0.23", features = ["server", "macros"] }
lightspeed_scheduler = "0.58"
log = "0.4"
num = "0.4"
once_cell = "1.16"
ordinals = "0.0.8"
port_check = "0.2"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false }
rlp = "0.5"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = "3.3"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.7", default-features = false, features = [
    "macros",
    "migrate",
    "json",
    "runtime-tokio",
] }
tempfile = "3"
testcontainers = { package = "testcontainers-modules", version = "0.7", features = [
    "postgres",
] }
thiserror = "1.0"
tokio = { version = "1.24", features = ["macros", "rt", "signal"] }
url = "2.5"


[profile.dev]
debug = false
