[workspace]
members = [
    "src/icrc-client",
    "src/did",
    "src/eth-signer",
    "src/eth-signer/tests/test_canister",
    "src/ethereum-json-rpc-client",
    "src/evm-block-extractor",
    "src/evm-canister-client",
    "src/evm-log-extractor",
    "src/signature-verification-canister-client",
]
resolver = "2"

[workspace.package]
authors = ["Bitfinity Network"]
categories = ["cryptography::cryptocurrencies"]
description = "EVM canister SDK"
edition = "2021"
homepage = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
include = ["src/**/*", "LICENSE", "README.md"]
license = "MIT"
repository = "https://github.com/bitfinity-network/bitfinity-evm-sdk"
version = "0.44.0"

[workspace.dependencies]
did = { path = "src/did" }
eth-signer = { path = "src/eth-signer" }
icrc-client = { path = "src/icrc-client" }
ethereum-json-rpc-client = { path = "src/ethereum-json-rpc-client" }
evm-block-extractor = { path = "src/evm-block-extractor" }
evm-canister-client = { path = "src/evm-canister-client" }
evm-log-extractor = { path = "src/evm-log-extractor" }
register-evm-agent-core = { path = "src/register-evm-agent-core" }
register-evm-agent = { path = "src/register-evm-agent" }
signature-verification-canister-client = { path = "src/signature-verification-canister-client" }

alloy = { version = "0.9", default-features = false, features = [
    "consensus",
    "k256",
    "eips",
    "rpc-types-eth",
    "rlp",
    "serde",
] }
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
bytes = "1.7"
candid = "0.10"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", default-features = false }
derive_more = { version = "2", features = ["display", "from", "into"] }
env_logger = { version = "0.11.4", default-features = false }
futures = { version = "0.3", default-features = false }
ic-canister = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister", tag = "v0.23.x" }
ic-canister-client = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-canister-client", tag = "v0.23.x" }
ic-exports = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-exports", tag = "v0.23.x" }
ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.23.x" }
ic-stable-structures = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-stable-structures", tag = "v0.23.x" }
itertools = "0.14"
jsonrpc-core = "18.0"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
lightspeed_scheduler = "0.60"
log = "0.4"
num = "0.4"
port_check = "0.2"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false }
serial_test = "3"
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_with = "3.3"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8.1", default-features = false, features = [
    "macros",
    "migrate",
    "json",
    "runtime-tokio",
] }
tempfile = "3"
testcontainers = { package = "testcontainers-modules", version = "0.11", features = [
    "postgres",
] }
thiserror = "2.0"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"

[profile.dev]
debug = false
