[package]
categories = ["cryptography::cryptocurrencies"]
description = "API types definition for EVM canister"
include = ["src/**/*", "../../LICENSE", "../../README.md"]
name = "did"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
candid = { workspace = true }
derive_more = { workspace = true }
ic-log = { workspace = true }
ic-stable-structures = { workspace = true }
jsonrpc-core = { workspace = true }
log = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["rand"]}
eth-signer = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
