[package]
categories = ["cryptography::cryptocurrencies"]
description = "Helper macros to encode storable types"
include = ["src/**/*", "../../LICENSE", "../../README.md"]
name = "encode-macros"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
ic-stable-structures = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true, features = ["full"] }
