[package]
categories = ["cryptography::cryptocurrencies"]
description = "API types definition for EVM canister"
include = ["src/**/*", "../../LICENSE", "../../README.md"]
name = "eth-signer"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
ic_sign = ["ic-canister", "ic-exports", "candid"]

[dependencies]
async-trait = { workspace = true }
ethers-core = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

# Dependencies for ic-siginig
ic-exports = { workspace = true, optional = true }
ic-canister = { workspace = true, optional = true }
candid = { workspace = true, optional = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }

