[package]
name = "ethereum-json-rpc-client"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
ic-canister-client = ["candid", "dep:ic-canister-client"]
pocket-ic-tests-client = ["ic-canister-client", "ic-canister-client/pocket-ic-client"]
reqwest = ["dep:reqwest"]

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true, optional = true }
hex = { workspace = true }
ic-canister-client = { workspace = true, optional = true }
itertools = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, optional = true, features = [
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
jsonrpc-core = { workspace = true }

[dev-dependencies]
env_logger = {workspace = true}
hex = { workspace = true }
tokio = { workspace = true }
