[package]
name = "evm-block-extractor"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
did = { workspace = true }
env_logger = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "reqwest",
] }
ethers-core = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpsee = { workspace = true }
lightspeed_scheduler = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "tls-rustls"] }
tokio = { workspace = true }


[dev-dependencies]
jsonrpc-core = { workspace = true }
port_check = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }

