[package]
name = "evm-block-extractor"
version = "0.1.0"
edition = "2021"


[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
did = { workspace = true }
env_logger = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = [
    "reqwest",
] }
futures = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpsee = { workspace = true }
lightspeed_scheduler = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "tls-rustls", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
alloy = { workspace = true, features = ["rand"]}
jsonrpc-core = { workspace = true }
port_check = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }

