[package]
name = "evm-block-extractor"

authors.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
did = { workspace = true }
env_logger = { workspace = true }
ethereum-json-rpc-client = { workspace = true, features = ["reqwest"] }
futures = { workspace = true }
jsonrpsee = { workspace = true }
lightspeed_scheduler = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "tls-rustls", "chrono"] }
thiserror = { workspace = true }
tokio = { workspace = true }


[dev-dependencies]
alloy = { workspace = true, features = ["rand"] }
port_check = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
