[package]
name = "evm-log-extractor"

authors.workspace = true
homepage.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
did = { workspace = true }
env_logger = { workspace = true }
evm-canister-client = { workspace = true, features = ["ic-agent-client"] }
lightspeed_scheduler = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
