[package]
name = "icrc-client"


authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-canister-client = { workspace = true }
candid.workspace = true
ic-exports = { workspace = true, features = ["icrc", "ledger"] }
thiserror.workspace = true
serde.workspace = true
