[package]
categories = ["cryptography::cryptocurrencies"]
description = "API types definition for minter canister"
include = ["src/**/*", "../../LICENSE", "../../README.md"]
name = "minter-api"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did = { path = "../did" }
eth-signer = { path = "../eth-signer" }

serde = { workspace = true }
candid = { workspace = true }
thiserror = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"]}
ic-log = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
