[package]
name = "minter-client"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bitfinity = []

[dependencies]
did = { path = "../did" }

ic-canister = { workspace = true }
ic-exports = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ethers-core = { workspace = true }
jsonrpc-core = { workspace = true }
thiserror = { workspace = true }