[package]
name = "minter-client"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bitfinity = []

[dependencies]
did = { path = "../did" }
minter-did = { path = "../minter-did" }
candid = { workspace = true }
ic-canister-client = { workspace = true }