[package]
name = "minter-client"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
bitfinity = []

[dependencies]
candid = { workspace = true }
did = { path = "../did" }
ethers-core = { workspace = true }
ic-canister = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true }
jsonrpc-core = { workspace = true }
minter-did = { path = "../minter-did" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
