[package]
categories = ["cryptography::cryptocurrencies"]
description = "API types definition for minter canister"
include = ["src/**/*", "../../LICENSE", "../../README.md"]
name = "minter-did"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
runes = ["ordinals"]

[dependencies]
candid = { workspace = true }
did = { path = "../did" }
eth-signer = { path = "../eth-signer" }
ethers-core = { workspace = true }
ic-canister-client = { workspace = true }
ic-exports = { workspace = true, features = ["icrc"] }
ic-log = { workspace = true }
ic-stable-structures = { workspace = true }
ordinals = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tokio = { workspace = true }
