[package]
name = "register-evm-agent-core"
categories = []
description = ""
include = ["src/**/*", "README.md"]
keywords = []
readme = "README.md"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
candid = { workspace = true }
did = { workspace = true }
eth-signer = { workspace = true }
evm-canister-client = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
tokio = ["dep:tokio"]
ic-agent-client = ["evm-canister-client/ic-agent-client"]
