[package]
name = "register_evm_agent"
categories = []
description = ""
include = ["src/**/*", "README.md"]
keywords = []
readme = "README.md"

authors.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
did = { path = "../did" }
env_logger = { workspace = true }
eth-signer = { path = "../eth-signer" }
ethers-core = { workspace = true }
evm-canister-client = { path = "../evm-canister-client", features = [
    "ic-agent-client",
] }
register_evm_agent_core = { path = "../register-evm-agent-core", features = ["tokio"] }
hex = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
