[package]
name = "register_agent"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "register_agent"
path = "src/main.rs"

[dependencies]
candid = { workspace = true }
ethers-core = { workspace = true }
rand = { workspace = true }
ic-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rlp = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
ic-exports = { workspace = true, features = ["state-machine"] }
eth-signer = { path = "../eth-signer" }
did = { path = "../did" }
evm_adapter = { path = "../evm-adapter" }
clap = { workspace = true }
dirs = { workspace = true }
