[package]
name = "register_agent"
categories = [ ]
description = ""
edition = "2021"
homepage = "https://github.com/infinity-swap/register-evm-agent"
include = ["src/**/*", "README.md"]
keywords = [ ]
readme = "README.md"
repository = "https://github.com/infinity-swap/register-evm-agent"
version = "0.1.0"

"version.workspace" = true
"edition.workspace" = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "register_agent"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
did = { workspace = true }
dirs = { workspace = true }
env_logger = { workspace = true }
eth-signer = { workspace = true }
ethers-core = { workspace = true }
evm_adapter = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-exports = { workspace = true, features = ["state-machine"] }
log = { workspace = true }
rand = { workspace = true }
rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
